// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #0f77b8;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-filter: brightness(125%);
  filter: brightness(125%);
}

<a
  class="c0"
  href="https://ooni.org"
>
  OONI
</a>
`;

exports[`Link renders with prop color 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #0f77b8;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #2f9e44;
}

.c0:hover {
  -webkit-filter: brightness(125%);
  filter: brightness(125%);
}

<a
  class="c0"
  color="green8"
>
  OONI Green
</a>
`;
